fix results size, avoid vertical page scrollbar

--- a/assets/dz-admin/dz-admin.css
+++ b/assets/dz-admin/dz-admin.css
@@ -28,6 +28,9 @@
       color: #f5dd5d; }
       .dz-lang-selector .dz-lang-btn.dz-lang-current:hover {
         text-decoration: none; }
+.object-tools {
+  margin-right: 20px; }
+
 #content {
   padding: 10px 20px; }
 
@@ -75,10 +78,7 @@
   overflow: auto;
   margin-top: 5px;
   width: 100%;
-  height: calc(100vh - 250px); }
-
-.object-tools {
-  margin-right: 20px; }
+  height: calc(100vh - 288px); }
 body.model-tip .field-col_tip {
   min-width: 240px; }
 
